@@ -40,6 +40,7 @@
    - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
    - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
    - ofa_itvcolumnable_get_menu_label(): new function.
+   - ofo_entry_get_abr_from_status(): new function.
    - Periodicity properties: review UI margins (todo #1366).
 
 -----------------------------------------------------------------------
